# machine-learning-mlzoomcamp-homework

./: README.md  svr_model_pipeline.pkl
01-homework/: homework1.ipynb
02-homework/: homework02.ipynb
03-homework/: homework03.ipynb
04-homework/: homework04.ipynb
05-homework/: Dockerfile  README.md  predict.py  pyproject.toml  test.py  train.py  workshop-uv-fastapi.ipynb
06-homework/: 06-homework.ipynb
08-homework/: 08-homework.ipynb
09-homework/: 09-homework.ipynb
capstone_1/: Dockerfile  EDA_weather_data.ipynb  README.md  encoders.pkl  modelling.ipynb  predict.py  pyproject.toml  random_forest_model_pipeline.pkl  test.py  train.py
midterm_project/: Dockerfile  EDA_airquality.ipynb  README.md  modelling.ipynb  predict.py  pyproject.toml  train.py
