[project]
name = "capstone-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]
