[project]
name = "co_prediction"
version = "0.1.6"
description = "ACO regression model with FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.1",
    "scikit-learn>=1.6.1",
    "uvicorn>=0.38.0",
    "pandas>=2.0",
    "numpy",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]
